--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   "devDependencies": {
     "eslint": "^4.3.0",
     "eslint-config-moxy": "^3.0.0",
-    "jest": "^20.0.4"
+    "husky": "^0.14.3",
+    "jest": "^20.0.4",
+    "lint-staged": "^4.0.2"
   },
   "dependencies": {
     "p-try": "^1.0.0"
