Fix package name.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yargs-promise-handler-moxy",
+  "name": "yargs-promise-handler",
   "description": "Adds support for promises in yargs handlers and enables composing handlers",
   "version": "1.0.0",
   "keywords": [
