--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "root": true,
     "extends": [
         "eslint-config-moxy/es6",
-        "eslint-config-moxy/addons/node"
+        "eslint-config-moxy/addons/node",
+        "eslint-config-moxy/addons/jest"
     ],
     "rules": {
         "func-style": 0
